fixed text align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ h1 {
 }
 
 #aboutMe {
-    text-align: center;
+    /* text-align: center; */
 }
 
 #mePic {
